--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "postdevpublish": "git checkout develop",
     "devpublish:force": "npm run devpublish -- --force-publish=*",
     "lerna": "lerna bootstrap",
-    "clean": "lerna clean",
+    "clean": "lerna clean --yes && npm run build:clean && rimraf node_modules",
     "start": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env npm run spin:watch",
     "start:envSSR": "cross-env SSR=true NODE_ENV=development ENV_FILE=../../config/development/dev.env npm run spin:watch",
     "start:test": "cross-env NODE_ENV=test ENV_FILE=../../config/test/test.env spin watch",
@@ -28,6 +28,7 @@
     "prodBuild": "cross-env NODE_ENV=production babel-node --presets es2015 tools/webpack.run",
     "build": "npm run build:packages",
     "build:packages": "lerna run build --ignore *server",
+    "build:clean": "lerna exec npm run build:clean",
     "build:packages:watch": "lerna run build:lib:watch --ignore *server --stream",
     "db:migrate": "knex migrate:latest --cwd . --knexfile ./servers/backend-server/knexfile.js",
     "db:migrate:rollback": "knex migrate:rollback  --cwd . --knexfile ./servers/backend-server/knexfile.js",
