--- a/package.json
+++ b/package.json
@@ -221,7 +221,7 @@
     "uglifyjs-webpack-plugin": "^1.2.4",
     "url-loader": "^1.0.1",
     "wait-on": "^2.1.0",
-    "webpack": "^4.19.0",
+    "webpack": "4.28.4",
     "webpack-cli": "^3.1.0",
     "webpack-dev-middleware": "^3.3.0",
     "webpack-dev-server": "^3.1.8",
