--- a/tools/templates/module/server/package.json
+++ b/tools/templates/module/server/package.json
@@ -41,7 +41,7 @@
         "cross-env": "^5.1.3",
         "jest": "^22.4.2",
         "rimraf": "^2.6.1",
-        "webpack": "^4.19.0"
+        "webpack": "4.28.4"
     },
     "typings": "lib/index.d.ts",
     "typescript": {
