few updates to frontend

--- a/servers/frontend-server/package.json
+++ b/servers/frontend-server/package.json
@@ -38,11 +38,11 @@
 	"dependencies": {
 		"@cdm-logger/client": "^5.0.4",
 		"@cdm-logger/server": "^5.0.4",
-		"@common-stack/client-core": "0.0.187",
-		"@common-stack/client-react": "0.0.187",
-		"@common-stack/client-redux": "0.0.187",
-		"@common-stack/core": "0.0.187",
-		"@common-stack/server-core": "0.0.187",
+		"@common-stack/client-core": "0.0.195",
+		"@common-stack/client-react": "0.0.195",
+		"@common-stack/client-redux": "0.0.195",
+		"@common-stack/core": "0.0.195",
+		"@common-stack/server-core": "0.0.195",
 		"@sample-stack/client-core": "file:../../packages/sample-client-core",
 		"@sample-stack/client-react": "file:../../packages/sample-client-react",
 		"@sample-stack/client-redux": "file:../../packages/sample-client-redux",
@@ -67,6 +67,7 @@
 		"browser-bunyan": "^1.3.0",
 		"bunyan": "^1.8.12",
 		"classnames": "^2.2.5",
+		"connected-react-router": "^6.2.2",
 		"cors": "^2.8.4",
 		"dotenv": "^5.0.0",
 		"envalid": "^4.1.4",
@@ -91,9 +92,9 @@
 		"js-cookie": "^2.2.0",
 		"lodash": "^4.17.10",
 		"ramda": "^0.25.0",
-		"react": "^16.4.2",
+		"react": "^16.8.1",
 		"react-apollo": "^2.1.11",
-		"react-dom": "^16.4.2",
+		"react-dom": "^16.8.1",
 		"react-fela": "7.3.0",
 		"react-helmet": "^5.2.0",
 		"react-loadable": "^5.4.0",
@@ -106,11 +107,14 @@
 		"react-router-redux": "^5.0.0-alpha.8",
 		"react-transition-group": "^2.3.1",
 		"recompose": "^0.27.1",
-		"redux": "^4.0.0",
+		"redux": "^4.0.1",
+		"redux-observable": "^1.0.0",
+		"redux-persist": "^5.10.0",
 		"redux-logger": "^3.0.6",
 		"redux-thunk": "^2.3.0",
 		"reselect": "^3.0.1",
 		"serialize-javascript": "^1.5.0",
+		"sourcemapped-stacktrace": "^1.1.9",
 		"subscriptions-transport-ws": "^0.9.15",
 		"universal-cookie-express": "^3.0.4"
 	},
