--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sample-stack",
   "private": true,
-  "version": "0.4.1",
+  "version": "0.4.3",
   "scripts": {
     "jest": "./node_modules/.bin/jest",
     "compile": "lerna exec -- npm run compile",
@@ -15,7 +15,7 @@
     "devpublish": "npm run lerna:predevpublish && lerna publish --cd-version=prerelease",
     "postdevpublish": "git checkout develop",
     "devpublish:force": "npm run devpublish -- --force-publish=*",
-    "lerna": "lerna bootstrap",
+    "lerna": "lerna bootstrap --hoist",
     "clean": "lerna clean --yes && npm run build:clean && rimraf node_modules",
     "start": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env npm run spin:watch",
     "start:envSSR": "cross-env SSR=true NODE_ENV=development ENV_FILE=../../config/development/dev.env npm run spin:watch",
@@ -24,6 +24,8 @@
     "spin:watch": "spin watch",
     "spin:watch:debug": "npm run spin:watch -- -v",
     "spin:exp": "spin exp",
+    "postbootstrap": "npm run build",
+    "prebootstrap": "lerna run prepare",
     "watch": "lerna exec --no-sort --ignore *server --stream --parallel -- webpack --watch",
     "prodBuild": "cross-env NODE_ENV=production babel-node --presets es2015 tools/webpack.run",
     "build": "npm run build:packages",
@@ -120,6 +122,7 @@
     "@types/webpack-env": "^1.13.5",
     "@types/zen-observable": "^0.8.0",
     "apollo": "^2.0.11",
+    "apollo-server-testing": "^2.3.2",
     "apollo-test-utils": "^0.3.2",
     "autoprefixer": "^8.4.1",
     "awesome-typescript-loader": "^5.2.1",
@@ -161,11 +164,13 @@
     "ip": "^1.1.5",
     "isomorphic-style-loader": "^4.0.0",
     "istanbul": "1.0.0-alpha.2",
-    "jest": "^22.4.2",
-    "jest-cli": "^22.4.2",
+    "jest": "23.6.0",
+    "jest-css-modules-transform": "^2.1.1",
+    "jest-dom": "^3.0.1",
+    "jest-junit": "6.0.1",
+    "jest-matcher-utils": "23.6.0",
     "jest-transform-graphql": "^2.1.0",
-    "jsdom": "^11.6.0",
-    "json-loader": "^0.5.7",
+    "jsdom": "^13.2.0",
     "lerna": "3.8.0",
     "lint-staged": "^6.1.0",
     "lodash": "^4.17.10",
@@ -189,7 +194,8 @@
     "qrcode-terminal": "^0.12.0",
     "raw-loader": "^0.5.1",
     "react-addons-test-utils": "^15.6.2",
-    "react-test-renderer": "^16.2.0",
+    "react-hot-loader": "^4.6.5",
+    "react-test-renderer": "^16.8.0",
     "redux-devtools": "^3.4.0",
     "redux-devtools-dock-monitor": "^1.1.2",
     "redux-devtools-extension": "^2.13.2",
