--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sample-stack",
   "private": true,
-  "version": "0.4.3",
+  "version": "0.4.4",
   "scripts": {
     "jest": "./node_modules/.bin/jest",
     "compile": "lerna exec -- npm run compile",
@@ -45,31 +45,6 @@
     "postcoverage": "remap-istanbul --input coverage/coverage.raw.json --type lcovonly --output coverage/lcov.info",
     "check-updates": "lerna exec ./node_modules/.bin/npm-check-updates -- -u"
   },
-  "jest": {
-    "globals": {
-      "ts-jest": {
-        "skipBabel": true
-      }
-    },
-    "testEnvironment": "node",
-    "roots": [
-      "packages",
-      "packages-modules",
-      "servers"
-    ],
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "gql",
-      "graphql"
-    ],
-    "transform": {
-      "\\.(gql|graphql)$": "jest-transform-graphql",
-      "\\.(ts|tsx)$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
-    },
-    "testRegex": "/__tests__/.*test*\\.(ts|tsx|js)$"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/cdmbase/fullstack-pro.git"
@@ -101,7 +76,7 @@
     "@types/express": "^4.0.35",
     "@types/graphql": "^14.0.3",
     "@types/isomorphic-fetch": "0.0.34",
-    "@types/jest": "^22.2.0",
+    "@types/jest": "^24.0.9",
     "@types/knex": "^0.14.5",
     "@types/minimist": "^1.2.0",
     "@types/mongoose": "^5.0.15",
@@ -164,11 +139,11 @@
     "ip": "^1.1.5",
     "isomorphic-style-loader": "^4.0.0",
     "istanbul": "1.0.0-alpha.2",
-    "jest": "23.6.0",
+    "jest": "^24.1.0",
     "jest-css-modules-transform": "^2.1.1",
-    "jest-dom": "^3.0.1",
-    "jest-junit": "6.0.1",
-    "jest-matcher-utils": "23.6.0",
+    "jest-dom": "^3.1.2",
+    "jest-junit": "^6.3.0",
+    "jest-matcher-utils": "24.0.0",
     "jest-transform-graphql": "^2.1.0",
     "jsdom": "^13.2.0",
     "lerna": "3.8.0",
@@ -215,7 +190,7 @@
     "standard-version": "^4.0.0",
     "style-loader": "^0.21.0",
     "tcomb": "^3.2.24",
-    "ts-jest": "^22.4.5",
+    "ts-jest": "^24.0.0",
     "ts-loader": "^4.5.0",
     "ts-node": "^6.0.0",
     "tslib": "^1.9.0",
