--- a/packages/sample-microservice-nats/package.json
+++ b/packages/sample-microservice-nats/package.json
@@ -45,9 +45,9 @@
 		"@sample-stack/utils": "file:../sample-utils"
 	},
 	"peerDependencies": {
-		"hemera-joi": "1.x",
-		"hemera-plugin": "^0.0.2",
-		"nats-hemera": "1.x"
+		"hemera-joi": ">5.x",
+		"hemera-plugin": ">=2.x",
+		"nats-hemera": ">=5.x"
 	},
 	"typings": "lib/index.d.ts",
 	"typescript": {
