--- a/package.json
+++ b/package.json
@@ -162,6 +162,7 @@
     "jest-css-modules-transform": "^2.1.1",
     "jest-dom": "^3.1.2",
     "jest-junit": "^6.3.0",
+    "jest-raw-loader": "^1.0.1",
     "jest-matcher-utils": "24.0.0",
     "jest-transform-graphql": "^2.1.0",
     "jsdom": "^13.2.0",
