--- a/package.json
+++ b/package.json
@@ -101,7 +101,7 @@
     "@types/express": "^4.0.35",
     "@types/graphql": "^14.0.3",
     "@types/isomorphic-fetch": "0.0.34",
-    "@types/jest": "^24.0.9",
+    "@types/jest": "^24.0.11",
     "@types/knex": "^0.14.5",
     "@types/minimist": "^1.2.0",
     "@types/mongoose": "^5.0.15",
@@ -158,12 +158,12 @@
     "ip": "^1.1.5",
     "isomorphic-style-loader": "^4.0.0",
     "istanbul": "1.0.0-alpha.2",
-    "jest": "^24.1.0",
+    "jest": "^24.3.1",
     "jest-css-modules-transform": "^2.1.1",
     "jest-dom": "^3.1.2",
     "jest-junit": "^6.3.0",
     "jest-raw-loader": "^1.0.1",
-    "jest-matcher-utils": "24.0.0",
+    "jest-matcher-utils": "^24.3.1",
     "jest-transform-graphql": "^2.1.0",
     "jsdom": "^13.2.0",
     "lerna": "3.8.0",
