--- a/servers/backend-server/package.json
+++ b/servers/backend-server/package.json
@@ -54,8 +54,8 @@
 	"homepage": "https://github.com/cdmbase/fullstack-pro#readme",
 	"dependencies": {
 		"@cdm-logger/server": "^5.0.4",
-		"@common-stack/core": "0.0.195",
-		"@common-stack/server-core": "0.0.195",
+		"@common-stack/core": "0.0.200",
+		"@common-stack/server-core": "0.0.200",
 		"@sample-stack/core": "file:../../packages/sample-core",
 		"@sample-stack/counter": "file:../../packages-modules/counter",
 		"@sample-stack/graphql-gql": "file:../../packages/sample-graphql-client",
@@ -66,33 +66,34 @@
 		"@sample-stack/utils": "file:../../packages/sample-utils",
 		"apollo-datasource-rest": "^2.0.0-rc.8",
 		"apollo-errors": "^1.9.0",
-		"apollo-link": "^1.2.3",
-		"apollo-link-batch-http": "^1.2.3",
-		"apollo-link-context": "^1.0.9",
-		"apollo-link-error": "^1.1.1",
-		"apollo-link-http": "^1.5.5",
-		"apollo-link-ws": "^1.0.8",
+		"apollo-link": "^1.2.8",
+		"apollo-link-batch-http": "^1.2.8",
+		"apollo-link-context": "^1.0.14",
+		"apollo-link-error": "^1.1.7",
+		"apollo-link-http": "^1.5.11",
+		"apollo-link-ws": "^1.0.15",
 		"apollo-logger": "^0.3.0",
-		"apollo-server-express": "^2.2.0",
+		"apollo-server-core": "^2.4.8",
+		"apollo-server-express": "^2.4.8",
 		"app-root-path": "^2.0.1",
 		"body-parser": "^1.18.3",
 		"cors": "^2.8.4",
-		"dotenv": "^5.0.0",
+		"dotenv": "^6.2.0",
 		"envalid": "^4.1.4",
 		"express": "^4.16.3",
-		"graphql": "^0.13.2",
+		"graphql": "^14.0.2",
 		"graphql-nats-subscriptions": "^1.3.0",
 		"graphql-subscriptions": "^1.0.0",
 		"graphql-tools": "^4.0.3",
-		"hemera-plugin": "0.1.2",
-		"inversify": "^4.13.0",
+		"hemera-plugin": "1.3.0",
+		"inversify": "^5.0.1",
 		"isomorphic-fetch": "^2.2.1",
 		"knex": "^0.14.4",
 		"lodash": "^4.17.10",
 		"morgan": "^1.9.0",
 		"mysql": "^2.15.0",
 		"nats": "^0.8.4",
-		nats-hemera": "^5.8.9",
+		"nats-hemera": "^5.8.9",
 		"reflect-metadata": "^0.1.12",
 		"rxjs": "^6.3.3",
 		"rxjs-compat": "^6.3.3",
