--- a/servers/frontend-server/package.json
+++ b/servers/frontend-server/package.json
@@ -36,13 +36,13 @@
 	},
 	"homepage": "https://github.com/cdmbase/fullstack-pro#readme",
 	"dependencies": {
-		"@cdm-logger/client": "^5.0.4",
+		"@cdm-logger/client": "^5.0.7",
 		"@cdm-logger/server": "^5.0.4",
-		"@common-stack/client-core": "0.0.195",
-		"@common-stack/client-react": "0.0.195",
-		"@common-stack/client-redux": "0.0.195",
-		"@common-stack/core": "0.0.195",
-		"@common-stack/server-core": "0.0.195",
+		"@common-stack/client-core": "0.0.200",
+		"@common-stack/client-react": "0.0.200",
+		"@common-stack/client-redux": "0.0.200",
+		"@common-stack/core": "0.0.200",
+		"@common-stack/server-core": "0.0.200",
 		"@sample-stack/client-core": "file:../../packages/sample-client-core",
 		"@sample-stack/client-react": "file:../../packages/sample-client-react",
 		"@sample-stack/client-redux": "file:../../packages/sample-client-redux",
@@ -50,28 +50,29 @@
 		"@sample-stack/counter": "file:../../packages-modules/counter",
 		"@sample-stack/graphql-gql": "file:../../packages/sample-graphql-client",
 		"@sample-stack/utils": "file:../../packages/sample-utils",
-		"apollo-cache-inmemory": "^1.2.10",
-		"apollo-client": "^2.4.2",
+		"apollo-cache-inmemory": "^1.4.2",
+		"apollo-client": "^2.4.12",
 		"apollo-fetch": "^0.7.0",
-		"apollo-link": "^1.2.3",
-		"apollo-link-batch-http": "^1.2.3",
-		"apollo-link-context": "^1.0.9",
-		"apollo-link-debounce": "^2.0.0",
-		"apollo-link-error": "^1.1.1",
-		"apollo-link-http": "^1.5.5",
+		"apollo-link": "^1.2.8",
+		"apollo-link-batch-http": "^1.2.8",
+		"apollo-link-context": "^1.0.14",
+		"apollo-link-debounce": "^2.1.0",
+		"apollo-link-error": "^1.1.7",
+		"apollo-link-http": "^1.5.11",
 		"apollo-link-logger": "^1.2.3",
-		"apollo-link-retry": "^2.2.5",
+		"apollo-link-schema": "^1.1.6",
+		"apollo-link-retry": "^2.2.10",
 		"apollo-link-state": "^0.4.2",
-		"apollo-link-ws": "^1.0.8",
+		"apollo-link-ws": "^1.0.14",
 		"apollo-logger": "^0.3.0",
 		"browser-bunyan": "^1.3.0",
 		"bunyan": "^1.8.12",
 		"classnames": "^2.2.5",
 		"connected-react-router": "^6.2.2",
 		"cors": "^2.8.4",
-		"dotenv": "^5.0.0",
+		"dotenv": "^6.2.0",
 		"envalid": "^4.1.4",
-		"error-stack-parser": "^2.0.1",
+		"error-stack-parser": "^2.0.2",
 		"fela": "6.1.8",
 		"fela-beautifier": "^5.0.15",
 		"fela-dom": "7.0.8",
@@ -84,21 +85,21 @@
 		"fela-plugin-unit": "^5.0.17",
 		"fela-plugin-validator": "^5.2.0",
 		"fela-preset-web": "^8.0.8",
-		"graphql": "^0.13.2",
+		"graphql": "^14.0.2",
 		"graphql-tag": "^2.10.0",
 		"immutability-helper": "^2.6.6",
-		"inversify": "^4.13.0",
+		"inversify": "^5.0.1",
 		"isomorphic-fetch": "^2.2.1",
 		"js-cookie": "^2.2.0",
 		"lodash": "^4.17.10",
 		"ramda": "^0.25.0",
 		"react": "^16.8.1",
-		"react-apollo": "^2.1.11",
+		"react-apollo": "^2.4.1",
 		"react-dom": "^16.8.1",
 		"react-fela": "7.3.0",
 		"react-helmet": "^5.2.0",
 		"react-loadable": "^5.4.0",
-		"react-redux": "^5.0.7",
+		"react-redux": "^6.0.0",
 		"react-redux-typescript": "^2.3.0",
 		"react-resizable": "^1.7.5",
 		"react-router": "^4.3.1",
