--- a/servers/hemera-server/package.json
+++ b/servers/hemera-server/package.json
@@ -42,7 +42,7 @@
         "hemera-zipkin": "^3.1.0",
         "inversify": "^5.0.1",
         "nats": "^0.8.4",
-        nats-hemera": "^5.8.9",
+        "nats-hemera": "^5.8.9",
         "reflect-metadata": "^0.1.12"
     }
 }
