added graphql codegen

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sample-stack",
   "private": true,
-  "version": "0.4.4",
+  "version": "0.4.5",
   "scripts": {
     "jest": "./node_modules/.bin/jest",
     "compile": "lerna exec -- npm run compile",
@@ -14,6 +14,7 @@
     "lerna:predevpublish": "git checkout devpublish && git merge -s recursive -X theirs develop",
     "devpublish": "npm run lerna:predevpublish && lerna publish --cd-version=prerelease",
     "postdevpublish": "git checkout develop",
+    "graphqlGenerate": "graphql-codegen",
     "devpublish:force": "npm run devpublish -- --force-publish=*",
     "lerna": "lerna bootstrap --hoist",
     "clean": "lerna clean --yes && npm run build:clean && rimraf node_modules",
@@ -91,6 +92,13 @@
     "@babel/preset-typescript": "^7.1.0",
     "@babel/register": "^7.0.0",
     "@babel/runtime": "^7.2.0",
+    "@graphql-codegen/add": "^1.1.1",
+    "@graphql-codegen/cli": "^1.1.1",
+    "@graphql-codegen/typescript": "^1.1.1",
+    "@graphql-codegen/typescript-graphql-files-modules": "^1.1.1",
+    "@graphql-codegen/typescript-operations": "^1.1.1",
+    "@graphql-codegen/typescript-react-apollo": "^1.1.1",
+    "@graphql-codegen/typescript-resolvers": "^1.1.1",
     "@sample-stack/graphql-schema": "*",
     "@sample-stack/utils": "*",
     "@types/async": "^2.0.40",
@@ -215,7 +223,7 @@
     "tslint": "^5.0.0",
     "tslint-loader": "^3.6.0",
     "tslint-react": "^3.0.0",
-    "typescript": "3.1.3",
+    "typescript": "3.4.3",
     "uglify-es": "^3.3.9",
     "uglifyjs-webpack-plugin": "^1.2.4",
     "url-loader": "^1.0.1",
