--- a/packages-modules/counter/server/package.json
+++ b/packages-modules/counter/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@sample-stack/store",
+  "name": "@sample-stack/counter-module-server",
   "version": "0.0.1",
   "description": "Sample core for higher packages to depend on",
   "main": "lib/index.js",
@@ -13,7 +13,9 @@
     "build": "npm run build:clean && npm run build:lib",
     "build:clean": "rimraf lib",
     "build:lib": "webpack",
-    "build:lib:watch": "npm run build:lib -- --watch"
+    "build:lib:watch": "npm run build:lib -- --watch",
+    "schema:download": "./node_modules/.bin/apollo-codegen download-schema http://localhost:8080/graphql --output schema.json ",
+    "schema:generate": "./node_modules/.bin/apollo-codegen generate src/browser/graphql/**/*.graphql --schema schema.json --target typescript --output src/browser/types/schema.ts"
   },
   "publishConfig": {
     "access": "public"
@@ -39,14 +41,10 @@
   },
   "author": "CDMBase LLC",
   "license": "ISC",
-  "devDependencies": {
-  },
   "dependencies": {
-    "@sample-stack/core": "file:../sample-core",
-    "sequelize": "^5.7.6"
   },
   "peerDependencies": {
-    
+    "@common-stack/server-core": ">=0.0.200"
   },
   "typings": "lib/index.d.ts",
   "typescript": {
