--- a/servers/backend-server/package.json
+++ b/servers/backend-server/package.json
@@ -53,53 +53,51 @@
 	},
 	"homepage": "https://github.com/cdmbase/fullstack-pro#readme",
 	"dependencies": {
-		"@cdm-logger/server": "^5.0.4",
+		"@cdm-logger/server": "^5.0.5",
 		"@common-stack/core": "0.0.200",
 		"@common-stack/server-core": "0.0.200",
 		"@sample-stack/core": "file:../../packages/sample-core",
-		"@sample-stack/counter": "file:../../packages-modules/counter",
+		"@sample-stack/counter-module-server": "file:../../packages-modules/counter/server",
 		"@sample-stack/graphql-gql": "file:../../packages/sample-graphql-client",
 		"@sample-stack/graphql-schema": "file:../../packages/sample-graphql-schema",
 		"@sample-stack/microservice-nats": "file:../../packages/sample-microservice-nats",
 		"@sample-stack/server-core": "file:../../packages/sample-server-core",
 		"@sample-stack/store": "file:../../packages/sample-store",
-		"@sample-stack/utils": "file:../../packages/sample-utils",
 		"apollo-datasource-rest": "^2.0.0-rc.8",
 		"apollo-errors": "^1.9.0",
-		"apollo-link": "^1.2.8",
-		"apollo-link-batch-http": "^1.2.8",
-		"apollo-link-context": "^1.0.14",
-		"apollo-link-error": "^1.1.7",
-		"apollo-link-http": "^1.5.11",
-		"apollo-link-ws": "^1.0.15",
-		"apollo-logger": "^0.3.0",
+		"apollo-link": "^1.2.11",
+		"apollo-link-batch-http": "^1.2.11",
+		"apollo-link-context": "^1.0.17",
+		"apollo-link-error": "^1.1.10",
+		"apollo-link-http": "^1.5.14",
+		"apollo-link-ws": "^1.0.17",
+		"apollo-logger": "^0.3.1",
 		"apollo-server-core": "^2.4.8",
 		"apollo-server-express": "^2.4.8",
-		"app-root-path": "^2.0.1",
-		"body-parser": "^1.18.3",
-		"cors": "^2.8.4",
-		"dotenv": "^6.2.0",
-		"envalid": "^4.1.4",
-		"express": "^4.16.3",
-		"graphql": "^14.1.1",
+		"app-root-path": "^2.2.1",
+		"body-parser": "^1.19.0",
+		"cors": "^2.8.5",
+		"dotenv": "^7.0.0",
+		"envalid": "^5.0.0",
+		"express": "^4.16.4",
+		"graphql": "^14.2.1",
 		"graphql-nats-subscriptions": "^1.3.0",
-		"graphql-subscriptions": "^1.0.0",
-		"graphql-tools": "^4.0.3",
-		"hemera-plugin": "1.3.0",
+		"graphql-subscriptions": "^1.1.0",
+		"graphql-tools": "^4.0.4",
+		"hemera-plugin": "2.0.1",
 		"inversify": "^5.0.1",
 		"isomorphic-fetch": "^2.2.1",
-		"knex": "^0.14.4",
-		"lodash": "^4.17.10",
-		"morgan": "^1.9.0",
-		"mysql": "^2.15.0",
-		"nats": "^0.8.4",
-		"nats-hemera": "^5.8.9",
-		"reflect-metadata": "^0.1.12",
-		"rxjs": "^6.3.3",
-		"rxjs-compat": "^6.3.3",
-		"subscriptions-transport-ws": "^0.9.15",
-		"universal-cookie-express": "^3.0.4",
-		"ws": "^3.3.3"
+		"knex": "^0.16.5",
+		"lodash": "^4.17.11",
+		"morgan": "^1.9.1",
+		"nats": "^1.2.10",
+		"nats-hemera": "^7.0.1",
+		"reflect-metadata": "^0.1.13",
+		"rxjs": "^6.5.1",
+		"rxjs-compat": "^6.5.1",
+		"subscriptions-transport-ws": "^0.9.16",
+		"universal-cookie-express": "^3.1.0",
+		"ws": "^6.2.1"
 	},
 	"typings": "dist/main.d.ts",
 	"typescript": {
