--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "devpublish:force": "npm run devpublish -- --force-publish=*",
     "lerna": "lerna bootstrap --hoist",
     "clean": "lerna clean --yes && npm run build:clean && rimraf node_modules",
+    "clean:force": "rimraf package-lock.json && npm run clean",
     "start": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env npm run spin:watch",
     "start:envSSR": "cross-env SSR=true NODE_ENV=development ENV_FILE=../../config/development/dev.env npm run spin:watch",
     "start:test": "cross-env NODE_ENV=test ENV_FILE=../../config/test/test.env spin watch",
@@ -67,31 +68,31 @@
     "servers/*"
   ],
   "devDependencies": {
-    "@babel/cli": "^7.2.0",
-    "@babel/core": "^7.2.2",
-    "@babel/plugin-proposal-class-properties": "^7.2.0",
-    "@babel/plugin-proposal-decorators": "^7.2.0",
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.4",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-proposal-decorators": "^7.4.4",
     "@babel/plugin-proposal-export-default-from": "^7.2.0",
     "@babel/plugin-proposal-export-namespace-from": "^7.2.0",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.2.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.4.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
     "@babel/plugin-proposal-optional-chaining": "^7.2.0",
-    "@babel/plugin-proposal-pipeline-operator": "^7.2.0",
+    "@babel/plugin-proposal-pipeline-operator": "^7.3.2",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-syntax-export-default-from": "^7.0.0",
+    "@babel/plugin-syntax-export-default-from": "^7.2.0",
     "@babel/plugin-syntax-export-namespace-from": "^7.2.0",
     "@babel/plugin-syntax-import-meta": "^7.2.0",
     "@babel/plugin-syntax-numeric-separator": "^7.2.0",
-    "@babel/plugin-transform-destructuring": "^7.2.0",
-    "@babel/plugin-transform-modules-commonjs": "^7.2.0",
-    "@babel/plugin-transform-regenerator": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.2.0",
-    "@babel/preset-env": "^7.2.3",
+    "@babel/plugin-transform-destructuring": "^7.4.4",
+    "@babel/plugin-transform-modules-commonjs": "^7.4.4",
+    "@babel/plugin-transform-regenerator": "^7.4.4",
+    "@babel/plugin-transform-runtime": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.1.0",
-    "@babel/register": "^7.0.0",
-    "@babel/runtime": "^7.2.0",
+    "@babel/preset-typescript": "^7.3.3",
+    "@babel/register": "^7.4.4",
+    "@babel/runtime": "^7.4.4",
     "@graphql-codegen/add": "^1.1.1",
     "@graphql-codegen/cli": "^1.1.1",
     "@graphql-codegen/typescript": "^1.1.1",
@@ -100,33 +101,31 @@
     "@graphql-codegen/typescript-react-apollo": "^1.1.1",
     "@graphql-codegen/typescript-resolvers": "^1.1.1",
     "@sample-stack/graphql-schema": "*",
-    "@sample-stack/utils": "*",
-    "@types/async": "^2.0.40",
-    "@types/body-parser": "1.16.5",
+    "@types/async": "^2.4.1",
+    "@types/body-parser": "1.17.0",
     "@types/bunyan": "^1.8.0",
     "@types/cors": "2.8.1",
     "@types/enzyme": "^2.8.0",
-    "@types/express": "^4.0.35",
-    "@types/graphql": "^14.0.7",
+    "@types/express": "^4.16.1",
+    "@types/graphql": "^14.2.0",
     "@types/isomorphic-fetch": "0.0.34",
     "@types/jest": "^24.0.11",
-    "@types/knex": "^0.14.5",
     "@types/minimist": "^1.2.0",
-    "@types/mongoose": "^5.0.15",
+    "@types/mongoose": "^5.3.27",
     "@types/nats-hemera": "^2.0.0",
     "@types/node": "10.12.2",
-    "@types/prop-types": "^15.5.5",
-    "@types/react": "^16.4.10",
-    "@types/react-addons-test-utils": "^0.14.18",
-    "@types/react-dom": "^16.0.7",
-    "@types/react-helmet": "^5.0.3",
+    "@types/prop-types": "^15.7.1",
+    "@types/react": "^16.8.14",
+    "@types/react-addons-test-utils": "^0.14.24",
+    "@types/react-dom": "^16.8.4",
+    "@types/react-helmet": "^5.0.8",
     "@types/react-hot-loader": "^4.1.0",
-    "@types/react-loadable": "^5.4.0",
-    "@types/react-redux": "^6.0.2",
-    "@types/semver": "^5.5.0",
-    "@types/sinon": "^4.1.0",
-    "@types/webpack": "^3.8.4",
-    "@types/webpack-env": "^1.13.5",
+    "@types/react-loadable": "^5.5.1",
+    "@types/react-redux": "^7.0.8",
+    "@types/semver": "^6.0.0",
+    "@types/sinon": "^7.0.11",
+    "@types/webpack": "^4.4.29",
+    "@types/webpack-env": "^1.13.9",
     "@types/zen-observable": "^0.8.0",
     "apollo": "^2.9.0",
     "apollo-server-testing": "^2.4.8",
@@ -139,8 +138,8 @@
     "concurrently": "^3.5.0",
     "connect": "^3.6.5",
     "copy-webpack-plugin": "^4.5.1",
-    "cross-env": "^5.1.3",
-    "css-loader": "^0.28.11",
+    "cross-env": "^5.2.0",
+    "css-loader": "^2.1.1",
     "dotenv-safe": "^6.0.0",
     "dotenv-webpack": "^1.5.5",
     "envalid": "^4.1.4",
@@ -195,7 +194,7 @@
     "qrcode-terminal": "^0.12.0",
     "raw-loader": "^0.5.1",
     "react-addons-test-utils": "^15.6.2",
-    "react-hot-loader": "^4.6.5",
+    "react-hot-loader": "^4.8.4",
     "react-test-renderer": "^16.8.0",
     "redux-devtools": "^3.4.0",
     "redux-devtools-dock-monitor": "^1.1.2",
@@ -217,7 +216,7 @@
     "style-loader": "^0.21.0",
     "tcomb": "^3.2.24",
     "ts-jest": "^24.0.0",
-    "ts-loader": "^4.5.0",
+    "ts-loader": "^5.4.4",
     "ts-node": "^6.0.0",
     "tslib": "^1.9.0",
     "tslint": "^5.0.0",
@@ -247,7 +246,8 @@
     "@sample-stack/client-react": "file:packages/sample-client-react",
     "@sample-stack/client-redux": "file:packages/sample-client-redux",
     "@sample-stack/core": "file:packages/sample-core",
-    "@sample-stack/counter": "file:packages-modules/counter",
+    "@sample-stack/counter-module-server": "file:packages-modules/counter/server",
+    "@sample-stack/counter-module-browser": "file:packages-modules/counter/browser",
     "@sample-stack/graphql-gql": "file:packages/sample-graphql-client",
     "@sample-stack/graphql-schema": "file:packages/sample-graphql-schema",
     "@sample-stack/hemera-plugin": "file:packages/sample-hemera-plugin",
@@ -255,7 +255,6 @@
     "@sample-stack/sample-module": "file:packages-modules/sample-module",
     "@sample-stack/server-core": "file:packages/sample-server-core",
     "@sample-stack/store": "file:packages/sample-store",
-    "@sample-stack/utils": "file:packages/sample-utils",
     "sample-stack-backend-server": "file:servers/backend-server",
     "sample-stack-frontend-server": "file:servers/frontend-server",
     "sample-stack-hemera-server": "file:servers/hemera-server"
