--- a/packages/sample-graphql-schema/package.json
+++ b/packages/sample-graphql-schema/package.json
@@ -49,15 +49,14 @@
 		"@sample-stack/server-core": "file:../sample-server-core"
 	},
 	"devDependencies": {
-		"@sample-stack/utils": "file:../sample-utils"
 	},
 	"peerDependencies": {
-		"graphql": "^0.10.0 || ^0.11.0",
-		"graphql-tools": ">2.0.0",
-		"lodash": "^4.17.10"
+		"graphql": "^14.2.1",
+		"graphql-tools": ">4.0.4",
+		"lodash": "^4.17.11"
 	},
 	"optionalDependencies": {
-		"@types/graphql": "^0.11.3"
+		"@types/graphql": "^14.2.0"
 	},
 	"typings": "lib/index.d.ts",
 	"typescript": {
