--- a/packages/sample-hemera-plugin/package.json
+++ b/packages/sample-hemera-plugin/package.json
@@ -44,12 +44,11 @@
 	"license": "MIT",
 	"dependencies": {
 		"@sample-stack/core": "file:../sample-core",
-		"@sample-stack/server-core": "file:../sample-server-core",
-		"@sample-stack/utils": "file:../sample-utils"
+		"@sample-stack/server-core": "file:../sample-server-core"
 	},
 	"peerDependencies": {
-		"hemera-joi": ">=5.x",
-		"hemera-plugin": "0.x",
-		"nats-hemera": ">=5.x"
+		"hemera-joi": ">=6.x",
+		"hemera-plugin": "2.x",
+		"nats-hemera": ">=7.x"
 	}
 }
