--- a/packages/sample-microservice-nats/package.json
+++ b/packages/sample-microservice-nats/package.json
@@ -41,13 +41,12 @@
 	"license": "MIT",
 	"dependencies": {
 		"@sample-stack/core": "file:../sample-core",
-		"@sample-stack/server-core": "file:../sample-server-core",
-		"@sample-stack/utils": "file:../sample-utils"
+		"@sample-stack/server-core": "file:../sample-server-core"
 	},
 	"peerDependencies": {
-		"hemera-joi": ">5.x",
+		"hemera-joi": ">6.x",
 		"hemera-plugin": ">=2.x",
-		"nats-hemera": ">=5.x"
+		"nats-hemera": ">=7.x"
 	},
 	"typings": "lib/index.d.ts",
 	"typescript": {
