--- a/packages/sample-store/tsconfig.json
+++ b/packages/sample-store/tsconfig.json
@@ -3,9 +3,7 @@
   "compilerOptions": {
     "rootDirs": ["./src", "../../database"],
     "outDir": "../lib",
-    "typeRoots": [
-      "../../node_modules/@types"
-    ]
+    "declarationDir": "lib"
   },
   "exclude": [
     "node_modules",
