--- a/servers/frontend-server/package.json
+++ b/servers/frontend-server/package.json
@@ -37,7 +37,7 @@
 	"homepage": "https://github.com/cdmbase/fullstack-pro#readme",
 	"dependencies": {
 		"@cdm-logger/client": "^5.0.7",
-		"@cdm-logger/server": "^5.0.4",
+		"@cdm-logger/server": "^5.0.5",
 		"@common-stack/client-core": "0.0.200",
 		"@common-stack/client-react": "0.0.200",
 		"@common-stack/client-redux": "0.0.200",
@@ -47,76 +47,75 @@
 		"@sample-stack/client-react": "file:../../packages/sample-client-react",
 		"@sample-stack/client-redux": "file:../../packages/sample-client-redux",
 		"@sample-stack/core": "file:../../packages/sample-core",
-		"@sample-stack/counter": "file:../../packages-modules/counter",
+		"@sample-stack/counter-module-browser": "file:../../packages-modules/counter/browser",
 		"@sample-stack/graphql-gql": "file:../../packages/sample-graphql-client",
-		"@sample-stack/utils": "file:../../packages/sample-utils",
-		"apollo-cache-inmemory": "^1.4.2",
-		"apollo-client": "^2.4.12",
+		"apollo-cache-inmemory": "^1.5.1",
+		"apollo-client": "^2.5.1",
 		"apollo-fetch": "^0.7.0",
-		"apollo-link": "^1.2.8",
-		"apollo-link-batch-http": "^1.2.8",
-		"apollo-link-context": "^1.0.14",
+		"apollo-link": "^1.2.11",
+		"apollo-link-batch-http": "^1.2.11",
+		"apollo-link-context": "^1.0.17",
 		"apollo-link-debounce": "^2.1.0",
-		"apollo-link-error": "^1.1.7",
-		"apollo-link-http": "^1.5.11",
+		"apollo-link-error": "^1.1.10",
+		"apollo-link-http": "^1.5.14",
 		"apollo-link-logger": "^1.2.3",
-		"apollo-link-schema": "^1.1.6",
-		"apollo-link-retry": "^2.2.10",
+		"apollo-link-schema": "^1.2.2",
+		"apollo-link-retry": "^2.2.13",
 		"apollo-link-state": "^0.4.2",
-		"apollo-link-ws": "^1.0.14",
-		"apollo-logger": "^0.3.0",
-		"browser-bunyan": "^1.3.0",
+		"apollo-link-ws": "^1.0.17",
+		"apollo-logger": "^0.3.1",
+		"browser-bunyan": "^1.5.2",
 		"bunyan": "^1.8.12",
-		"classnames": "^2.2.5",
-		"connected-react-router": "^6.2.2",
-		"cors": "^2.8.4",
-		"dotenv": "^6.2.0",
-		"envalid": "^4.1.4",
+		"classnames": "^2.2.6",
+		"connected-react-router": "^6.4.0",
+		"cors": "^2.8.5",
+		"dotenv": "^7.0.0",
+		"envalid": "^5.0.0",
 		"error-stack-parser": "^2.0.2",
-		"fela": "6.1.8",
-		"fela-beautifier": "^5.0.15",
-		"fela-dom": "7.0.8",
-		"fela-font-renderer": "^5.0.10",
-		"fela-perf": "^5.0.3",
-		"fela-plugin-fallback-value": "^5.0.18",
-		"fela-plugin-logger": "^5.0.5",
-		"fela-plugin-lvha": "^5.0.15",
-		"fela-plugin-prefixer": "^5.0.19",
-		"fela-plugin-unit": "^5.0.17",
-		"fela-plugin-validator": "^5.2.0",
-		"fela-preset-web": "^8.0.8",
-		"graphql": "^14.1.1",
-		"graphql-tag": "^2.10.0",
-		"immutability-helper": "^2.6.6",
+		"fela": "10.2.4",
+		"fela-beautifier": "^10.2.4",
+		"fela-dom": "10.2.4",
+		"fela-font-renderer": "^5.0.25",
+		"fela-perf": "^10.2.4",
+		"fela-plugin-fallback-value": "^10.2.4",
+		"fela-plugin-logger": "^10.2.4",
+		"fela-plugin-lvha": "^5.0.16",
+		"fela-plugin-prefixer": "^10.2.4",
+		"fela-plugin-unit": "^10.2.4",
+		"fela-plugin-validator": "^10.2.4",
+		"fela-preset-web": "^10.2.4",
+		"graphql": "^14.2.1",
+		"graphql-tag": "^2.10.1",
+		"immutability-helper": "^3.0.0",
 		"inversify": "^5.0.1",
 		"isomorphic-fetch": "^2.2.1",
 		"js-cookie": "^2.2.0",
-		"lodash": "^4.17.10",
-		"ramda": "^0.25.0",
-		"react": "^16.8.1",
-		"react-apollo": "^2.4.1",
-		"react-dom": "^16.8.1",
-		"react-fela": "7.3.0",
+		"lodash": "^4.17.11",
+		"ramda": "^0.26.1",
+		"react": "^16.8.6",
+		"react-apollo": "^2.5.5",
+		"react-dom": "^16.8.6",
+		"react-fela": "10.2.4",
 		"react-helmet": "^5.2.0",
-		"react-loadable": "^5.4.0",
-		"react-redux": "^6.0.0",
-		"react-redux-typescript": "^2.3.0",
+		"react-loadable": "^5.5.0",
+		"react-redux": "^7.0.3",
+		"react-redux-typescript": "^2.4.0",
 		"react-resizable": "^1.7.5",
-		"react-router": "^4.3.1",
-		"react-router-config": "^1.0.0-beta.4",
-		"react-router-dom": "^4.3.1",
+		"react-router": "^5.0.0",
+		"react-router-config": "^5.0.0",
+		"react-router-dom": "^5.0.0",
 		"react-router-redux": "^5.0.0-alpha.8",
-		"react-transition-group": "^2.3.1",
+		"react-transition-group": "^4.0.0",
 		"redux": "^4.0.1",
 		"redux-observable": "^1.1.0",
 		"redux-persist": "^5.10.0",
 		"redux-logger": "^3.0.6",
 		"redux-thunk": "^2.3.0",
-		"reselect": "^3.0.1",
-		"serialize-javascript": "^1.5.0",
+		"reselect": "^4.0.0",
+		"serialize-javascript": "^1.7.0",
 		"sourcemapped-stacktrace": "^1.1.9",
-		"subscriptions-transport-ws": "^0.9.15",
-		"universal-cookie-express": "^3.0.4"
+		"subscriptions-transport-ws": "^0.9.16",
+		"universal-cookie-express": "^3.1.0"
 	},
 	"jest": {
 		"moduleFileExtensions": [
