--- a/package.json
+++ b/package.json
@@ -103,17 +103,17 @@
     "@sample-stack/graphql-schema": "*",
     "@types/async": "^2.4.1",
     "@types/body-parser": "1.17.0",
-    "@types/bunyan": "^1.8.0",
-    "@types/cors": "2.8.1",
-    "@types/enzyme": "^2.8.0",
+    "@types/bunyan": "^1.8.6",
+    "@types/cors": "2.8.5",
+    "@types/enzyme": "^3.9.1",
     "@types/express": "^4.16.1",
     "@types/graphql": "^14.2.0",
-    "@types/isomorphic-fetch": "0.0.34",
+    "@types/isomorphic-fetch": "0.0.35",
     "@types/jest": "^24.0.11",
     "@types/minimist": "^1.2.0",
     "@types/mongoose": "^5.3.27",
-    "@types/nats-hemera": "^2.0.0",
-    "@types/node": "10.12.2",
+    "@types/nats-hemera": "^2.0.1",
+    "@types/node": "11.13.8",
     "@types/prop-types": "^15.7.1",
     "@types/react": "^16.8.14",
     "@types/react-addons-test-utils": "^0.14.24",
@@ -122,6 +122,8 @@
     "@types/react-hot-loader": "^4.1.0",
     "@types/react-loadable": "^5.5.1",
     "@types/react-redux": "^7.0.8",
+    "@types/react-router": "^4.4.5",
+    "@types/react-router-dom": "^4.3.2",
     "@types/semver": "^6.0.0",
     "@types/sinon": "^7.0.11",
     "@types/webpack": "^4.4.29",
@@ -129,117 +131,117 @@
     "@types/zen-observable": "^0.8.0",
     "apollo": "^2.9.0",
     "apollo-server-testing": "^2.4.8",
-    "autoprefixer": "^8.4.1",
+    "autoprefixer": "^9.5.1",
     "awesome-typescript-loader": "^5.2.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
-    "caporal": "^0.10.0",
-    "concurrently": "^3.5.0",
-    "connect": "^3.6.5",
-    "copy-webpack-plugin": "^4.5.1",
+    "caporal": "^1.1.0",
+    "concurrently": "^4.1.0",
+    "connect": "^3.6.6",
+    "copy-webpack-plugin": "^5.0.3",
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.1",
-    "dotenv-safe": "^6.0.0",
-    "dotenv-webpack": "^1.5.5",
-    "envalid": "^4.1.4",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "eslint": "^4.19.1",
-    "eslint-plugin-graphql": "^2.1.1",
-    "express": "^4.16.3",
+    "dotenv-safe": "^6.1.0",
+    "dotenv-webpack": "^1.7.0",
+    "envalid": "^5.0.0",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.12.1",
+    "eslint": "^5.16.0",
+    "eslint-plugin-graphql": "^3.0.3",
+    "express": "^4.16.4",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "file-loader": "^1.1.11",
+    "file-loader": "^3.0.1",
     "freeport-async": "^1.1.1",
-    "fs-extra": "^4.0.2",
-    "graphql-code-generator": "^0.13.0",
-    "hemera-testsuite": "^2.0.5",
+    "fs-extra": "^7.0.1",
+    "graphql-code-generator": "^0.18.1",
+    "hemera-testsuite": "^4.1.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "http-proxy-middleware": "^0.18.0",
-    "husky": "^0.14.3",
+    "http-proxy-middleware": "^0.19.1",
+    "husky": "^2.1.0",
     "ignore-loader": "^0.1.2",
-    "image-size": "^0.6.1",
+    "image-size": "^0.7.4",
     "ip": "^1.1.5",
-    "isomorphic-style-loader": "^4.0.0",
+    "isomorphic-style-loader": "^5.0.1",
     "istanbul": "1.0.0-alpha.2",
-    "jest": "^24.3.1",
+    "jest": "^24.7.1",
     "jest-css-modules-transform": "^2.1.1",
-    "jest-dom": "^3.1.2",
+    "jest-dom": "^3.1.3",
     "jest-junit": "^6.3.0",
     "jest-raw-loader": "^1.0.1",
-    "jest-matcher-utils": "^24.3.1",
+    "jest-matcher-utils": "^24.7.0",
     "jest-transform-graphql": "^2.1.0",
-    "jsdom": "^13.2.0",
-    "lerna": "3.8.0",
-    "lint-staged": "^6.1.0",
-    "lodash": "^4.17.10",
-    "mime": "^2.3.0",
-    "mini-css-extract-plugin": "^0.4.0",
+    "jsdom": "^15.0.0",
+    "lerna": "3.13.4",
+    "lint-staged": "^8.1.5",
+    "lodash": "^4.17.11",
+    "mime": "^2.4.2",
+    "mini-css-extract-plugin": "^0.6.0",
     "minilog": "^3.1.0",
     "mkdirp": "^0.5.1",
-    "mocha": "^5.0.0",
-    "mocha-steps": "^1.1.0",
+    "mocha": "^6.1.4",
+    "mocha-steps": "^1.3.0",
     "mocha-webpack": "^1.1.0",
     "module": "^1.2.5",
-    "morgan": "^1.9.0",
-    "nock": "^9.2.5",
-    "node-dev": "^3.1.3",
-    "node-sass": "^4.9.0",
-    "nodemon": "^1.17.4",
+    "morgan": "^1.9.1",
+    "nock": "^10.0.6",
+    "node-dev": "^4.0.0",
+    "node-sass": "^4.12.0",
+    "nodemon": "^1.18.11",
     "openurl": "^1.1.1",
-    "pm2": "^3.2.2",
-    "postcss-loader": "^2.1.5",
-    "prettier": "^1.12.1",
+    "pm2": "^3.5.0",
+    "postcss-loader": "^3.0.0",
+    "prettier": "^1.17.0",
     "qrcode-terminal": "^0.12.0",
-    "raw-loader": "^0.5.1",
+    "raw-loader": "^2.0.0",
     "react-addons-test-utils": "^15.6.2",
     "react-hot-loader": "^4.8.4",
-    "react-test-renderer": "^16.8.0",
-    "redux-devtools": "^3.4.0",
-    "redux-devtools-dock-monitor": "^1.1.2",
-    "redux-devtools-extension": "^2.13.2",
+    "react-test-renderer": "^16.8.6",
+    "redux-devtools": "^3.5.0",
+    "redux-devtools-dock-monitor": "^1.1.3",
+    "redux-devtools-extension": "^2.13.8",
     "redux-devtools-log-monitor": "^1.4.0",
-    "redux-mock-store": "^1.5.1",
-    "remap-istanbul": "^0.11.1",
-    "resolve-url-loader": "^2.3.0",
-    "rimraf": "^2.6.1",
-    "sass-loader": "^7.0.0",
-    "shelljs": "^0.8.1",
-    "sinon": "^5.0.4",
+    "redux-mock-store": "^1.5.3",
+    "remap-istanbul": "^0.13.0",
+    "resolve-url-loader": "^3.1.0",
+    "rimraf": "^2.6.3",
+    "sass-loader": "^7.1.0",
+    "shelljs": "^0.8.3",
+    "sinon": "^7.3.2",
     "sinon-as-promised": "^4.0.3",
-    "source-list-map": "^2.0.0",
-    "source-map-loader": "^0.2.3",
-    "source-map-support": "^0.5.5",
-    "spinjs": "0.4.179",
-    "standard-version": "^4.0.0",
-    "style-loader": "^0.21.0",
-    "tcomb": "^3.2.24",
-    "ts-jest": "^24.0.0",
+    "source-list-map": "^2.0.1",
+    "source-map-loader": "^0.2.4",
+    "source-map-support": "^0.5.12",
+    "spinjs": "0.4.193",
+    "standard-version": "^5.0.2",
+    "style-loader": "^0.23.1",
+    "tcomb": "^3.2.29",
+    "ts-jest": "^24.0.2",
     "ts-loader": "^5.4.4",
-    "ts-node": "^6.0.0",
-    "tslib": "^1.9.0",
-    "tslint": "^5.0.0",
+    "ts-node": "^8.1.0",
+    "tslib": "^1.9.3",
+    "tslint": "^5.16.0",
     "tslint-loader": "^3.6.0",
-    "tslint-react": "^3.0.0",
-    "typescript": "3.4.3",
+    "tslint-react": "^4.0.0",
+    "typescript": "3.4.5",
     "uglify-es": "^3.3.9",
-    "uglifyjs-webpack-plugin": "^1.2.4",
-    "url-loader": "^1.0.1",
-    "wait-on": "^2.1.0",
-    "webpack": "4.28.4",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-middleware": "^3.3.0",
-    "webpack-dev-server": "^3.1.8",
+    "uglifyjs-webpack-plugin": "^2.1.2",
+    "url-loader": "^1.1.2",
+    "wait-on": "^3.2.0",
+    "webpack": "4.30.0",
+    "webpack-cli": "^3.3.1",
+    "webpack-dev-middleware": "^3.6.2",
+    "webpack-dev-server": "^3.3.1",
     "webpack-fail-plugin": "^2.0.0",
-    "webpack-hot-middleware": "^2.24.0",
+    "webpack-hot-middleware": "^2.24.4",
     "webpack-manifest-plugin": "^2.0.4",
-    "webpack-merge": "^4.1.4",
+    "webpack-merge": "^4.2.1",
     "webpack-node-externals": "^1.7.2",
-    "webpack-sources": "^1.1.0",
+    "webpack-sources": "^1.3.0",
     "webpack-virtual-modules": "^0.1.10",
     "webpack-visualizer-plugin": "^0.1.11",
-    "ws": "^3.3.3"
+    "ws": "^6.2.1"
   },
   "dependencies": {
     "@sample-stack/client-core": "file:packages/sample-client-core",
