compatible with react-hot-loader v4 and hmr fixes

--- a/lerna.json
+++ b/lerna.json
@@ -22,7 +22,7 @@
   "packages": [
     "packages/*",
     "servers/*",
-    "packages-modules/*"
+    "packages-modules/**"
   ],
   "version": "0.0.0"
 }
