--- a/servers/frontend-server/package.json
+++ b/servers/frontend-server/package.json
@@ -61,7 +61,6 @@
 		"apollo-link-logger": "^1.2.3",
 		"apollo-link-schema": "^1.2.2",
 		"apollo-link-retry": "^2.2.13",
-		"apollo-link-state": "^0.4.2",
 		"apollo-link-ws": "^1.0.17",
 		"apollo-logger": "^0.3.1",
 		"browser-bunyan": "^1.5.2",
@@ -86,6 +85,7 @@
 		"fela-preset-web": "^10.2.4",
 		"graphql": "^14.2.1",
 		"graphql-tag": "^2.10.1",
+		"history": "^4.9.0",
 		"immutability-helper": "^3.0.0",
 		"inversify": "^5.0.1",
 		"isomorphic-fetch": "^2.2.1",
