converted from spinjs to zenjs

--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "lerna": "lerna bootstrap --hoist",
     "clean": "lerna clean --yes && npm run build:clean && rimraf node_modules",
     "clean:force": "rimraf package-lock.json && npm run clean",
-    "start": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env npm run spin:watch",
-    "start:envSSR": "cross-env SSR=true NODE_ENV=development ENV_FILE=../../config/development/dev.env npm run spin:watch",
-    "start:test": "cross-env NODE_ENV=test ENV_FILE=../../config/test/test.env spin watch",
-    "spin:build": "cross-env NODE_ENV=production spin build",
-    "spin:watch": "spin watch",
-    "spin:watch:debug": "npm run spin:watch -- -v",
-    "spin:exp": "spin exp",
+    "start": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env npm run zen:watch",
+    "start:envSSR": "cross-env SSR=true NODE_ENV=development ENV_FILE=../../config/development/dev.env npm run zen:watch",
+    "start:test": "cross-env NODE_ENV=test ENV_FILE=../../config/test/test.env zen watch",
+    "zen:build": "cross-env NODE_ENV=production zen build",
+    "zen:watch": "zen watch",
+    "zen:watch:debug": "npm run zen:watch -- -v",
+    "zen:exp": "zen exp",
     "postbootstrap": "npm run build",
     "prebootstrap": "lerna run prepare",
     "watch": "lerna exec --no-sort --ignore *server --stream --parallel -- webpack --watch",
@@ -100,6 +100,7 @@
     "@graphql-codegen/typescript-operations": "^1.1.1",
     "@graphql-codegen/typescript-react-apollo": "^1.1.1",
     "@graphql-codegen/typescript-resolvers": "^1.1.1",
+    "@larix/zen": "0.1.13",
     "@sample-stack/graphql-schema": "*",
     "@types/async": "^2.4.1",
     "@types/body-parser": "1.17.0",
@@ -213,7 +214,6 @@
     "source-list-map": "^2.0.1",
     "source-map-loader": "^0.2.4",
     "source-map-support": "^0.5.12",
-    "spinjs": "0.4.193",
     "standard-version": "^5.0.2",
     "style-loader": "^0.23.1",
     "tcomb": "^3.2.29",
