--- a/servers/backend-server/package.json
+++ b/servers/backend-server/package.json
@@ -7,14 +7,14 @@
 	"scripts": {
 		"prepublish": "npm run build:clean",
 		"build:clean": "rimraf dist",
-		"build": "cross-env NODE_ENV=production spin build",
+		"build": "cross-env NODE_ENV=production zen build",
 		"start": "cross-env NODE_ENV=production pm2-runtime  dist/index.js",
 		"start:test": "cross-env NODE_ENV=test ENV_FILE=../../config/test/test.env node --harmony dist",
 		"start:staging": "cross-env NODE_ENV=staging ENV_FILE=../../config/staging/staging.env node --harmony dist",
-		"watch": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env spin watch",
+		"watch": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env zen watch",
 		"watch:debug": "npm run watch -- -v",
-		"watch:test": "cross-env NODE_ENV=test ENV_FILE=../../config/test/test.env spin watch",
-		"watch:staging": "cross-env NODE_ENV=test ENV_FILE=../../config/staging/staging.env spin watch",
+		"watch:test": "cross-env NODE_ENV=test ENV_FILE=../../config/test/test.env zen watch",
+		"watch:staging": "cross-env NODE_ENV=test ENV_FILE=../../config/staging/staging.env zen watch",
 		"test": "jest",
 		"test:watch": "npm test -- --watch",
 		"test:notify": "npm run test:watch -- --notify",
