--- a/servers/frontend-server/package.json
+++ b/servers/frontend-server/package.json
@@ -10,16 +10,17 @@
 		"docker:run": "docker run  --env-file ../../config/staging/docker-staging.env  -p 3010:3010  -it $npm_package_name:$npm_package_version",
 		"prebuild": "npm run build:clean",
 		"build:clean": "rimraf dist",
-		"build": "cross-env NODE_ENV=production spin build",
-		"build:debug": "cross-env DEBUGGING=true NODE_ENV=production spin build",
+		"build": "cross-env NODE_ENV=production zen build",
+		"build:debug": "cross-env DEBUGGING=true NODE_ENV=production zen build",
 		"build:debug:verbose": "npm run build:debug -- -v",
 		"start": "cross-env NODE_ENV=production pm2-runtime  dist/index.js",
 		"start:staging": "cross-env NODE_ENV=staging ENV_FILE=../../config/staging/staging.env node --harmony dist",
 		"start:test": "cross-env NODE_ENV=test ENV_FILE=../../config/test/test.env node --harmony dist",
-		"watch": "cross-env SSR=true NODE_ENV=development ENV_FILE=../../config/development/dev.env spin watch",
+		"watch": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env zen watch",
+		"watch:ssr": "cross-env SSR=true && npm run watch",
 		"watch:debug": "npm run watch -- -v",
-		"watch:test": "cross-env ENV_FILE=../../config/test/test.env spin watch",
-		"watch:staging": "cross-env ENV_FILE=../../config/staging/staging.env spin watch",
+		"watch:test": "cross-env ENV_FILE=../../config/test/test.env zen watch",
+		"watch:staging": "cross-env ENV_FILE=../../config/staging/staging.env zen watch",
 		"jest": "./node_modules/.bin/jest",
 		"test": "jest",
 		"test:debug": "npm test -- --runInBand",
