--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "@types/graphql": "^14.2.0",
     "@types/isomorphic-fetch": "0.0.35",
     "@types/jest": "^24.0.11",
+    "@types/lodash-es": "^4.17.3",
     "@types/minimist": "^1.2.0",
     "@types/mongoose": "^5.3.27",
     "@types/nats-hemera": "^2.0.1",
@@ -170,13 +171,13 @@
     "jest-css-modules-transform": "^2.1.1",
     "jest-dom": "^3.1.3",
     "jest-junit": "^6.3.0",
-    "jest-raw-loader": "^1.0.1",
     "jest-matcher-utils": "^24.7.0",
+    "jest-raw-loader": "^1.0.1",
     "jest-transform-graphql": "^2.1.0",
     "jsdom": "^15.0.0",
     "lerna": "3.13.4",
     "lint-staged": "^8.1.5",
-    "lodash": "^4.17.11",
+    "lodash-es": "^4.17.11",
     "mime": "^2.4.2",
     "mini-css-extract-plugin": "^0.6.0",
     "minilog": "^3.1.0",
