--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "@graphql-codegen/typescript-operations": "^1.1.1",
     "@graphql-codegen/typescript-react-apollo": "^1.1.1",
     "@graphql-codegen/typescript-resolvers": "^1.1.1",
+    "@hot-loader/react-dom": "^16.8.6",
     "@larix/zen": "0.1.13",
     "@sample-stack/graphql-schema": "*",
     "@types/async": "^2.4.1",
@@ -177,6 +178,7 @@
     "jsdom": "^15.0.0",
     "lerna": "3.13.4",
     "lint-staged": "^8.1.5",
+    "lodash": "^4.17.11",
     "lodash-es": "^4.17.11",
     "mime": "^2.4.2",
     "mini-css-extract-plugin": "^0.6.0",
