--- a/servers/frontend-server/package.json
+++ b/servers/frontend-server/package.json
@@ -14,6 +14,7 @@
 		"build:debug": "cross-env DEBUGGING=true NODE_ENV=production zen build",
 		"build:debug:verbose": "npm run build:debug -- -v",
 		"start": "cross-env NODE_ENV=production pm2-runtime  dist/index.js",
+		"start:dev": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env node --harmony dist",
 		"start:staging": "cross-env NODE_ENV=staging ENV_FILE=../../config/staging/staging.env node --harmony dist",
 		"start:test": "cross-env NODE_ENV=test ENV_FILE=../../config/test/test.env node --harmony dist",
 		"watch": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env zen watch",
@@ -72,6 +73,7 @@
 		"dotenv": "^7.0.0",
 		"envalid": "^5.0.0",
 		"error-stack-parser": "^2.0.2",
+		"esm": "^3.2.22",
 		"fela": "10.2.4",
 		"fela-beautifier": "^10.2.4",
 		"fela-dom": "10.2.4",
