--- a/servers/backend-server/package.json
+++ b/servers/backend-server/package.json
@@ -79,6 +79,7 @@
 		"cors": "^2.8.5",
 		"dotenv": "^7.0.0",
 		"envalid": "^5.0.0",
+		"esm": "^3.2.22",
 		"express": "^4.16.4",
 		"graphql": "^14.2.1",
 		"graphql-nats-subscriptions": "^1.3.0",
