--- a/package.json
+++ b/package.json
@@ -232,10 +232,10 @@
     "uglifyjs-webpack-plugin": "^2.1.2",
     "url-loader": "^1.1.2",
     "wait-on": "^3.2.0",
-    "webpack": "4.30.0",
+    "webpack": "4.28.4",
     "webpack-cli": "^3.3.1",
     "webpack-dev-middleware": "^3.6.2",
-    "webpack-dev-server": "^3.3.1",
+    "webpack-dev-server": "3.2.1",
     "webpack-fail-plugin": "^2.0.0",
     "webpack-hot-middleware": "^2.24.4",
     "webpack-manifest-plugin": "^2.0.4",
