--- a/servers/backend-server/package.json
+++ b/servers/backend-server/package.json
@@ -96,7 +96,7 @@
 		"reflect-metadata": "^0.1.13",
 		"rxjs": "^6.5.1",
 		"rxjs-compat": "^6.5.1",
-		"subscriptions-transport-ws": "^0.9.16",
+		"subscriptions-transport-ws": "0.9.15",
 		"universal-cookie-express": "^3.1.0",
 		"ws": "^6.2.1"
 	},
