--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "@types/async": "^2.4.1",
     "@types/body-parser": "1.17.0",
     "@types/bunyan": "^1.8.6",
+    "@types/classnames": "^2.2.7",
     "@types/cors": "2.8.5",
     "@types/enzyme": "^3.9.1",
     "@types/express": "^4.16.1",
