--- a/servers/backend-server/package.json
+++ b/servers/backend-server/package.json
@@ -83,6 +83,7 @@
 		"express": "^4.16.4",
 		"graphql": "^14.2.1",
 		"graphql-nats-subscriptions": "^1.3.0",
+		"graphql-type-json": "^0.3.0",
 		"graphql-subscriptions": "^1.1.0",
 		"graphql-tools": "^4.0.4",
 		"hemera-plugin": "2.0.1",
