--- a/servers/frontend-server/package.json
+++ b/servers/frontend-server/package.json
@@ -52,7 +52,7 @@
 		"@sample-stack/counter-module-browser": "file:../../packages-modules/counter/browser",
 		"@sample-stack/graphql-gql": "file:../../packages/sample-graphql-client",
 		"apollo-cache-inmemory": "^1.5.1",
-		"apollo-client": "2.4.13",
+		"apollo-client": "^2.5.1",
 		"apollo-fetch": "^0.7.0",
 		"apollo-link": "^1.2.11",
 		"apollo-link-batch-http": "^1.2.11",
@@ -62,7 +62,6 @@
 		"apollo-link-http": "^1.5.14",
 		"apollo-link-logger": "^1.2.3",
 		"apollo-link-schema": "^1.2.2",
-		"apollo-link-state": "^0.4.2",
 		"apollo-link-retry": "^2.2.13",
 		"apollo-link-ws": "^1.0.17",
 		"apollo-logger": "^0.3.1",
