update setting up the project

--- a/config/development/dev.env.sample
+++ b/config/development/dev.env.sample
@@ -6,6 +6,6 @@ NATS_USER=test
 NATS_PW=test
 GRAPHQL_URL=http://localhost:8080/graphql
 CLIENT_URL=http://localhost:3000
-ZIPKIN_URL=
-ZIPKIN_PORT=
+ZIPKIN_URL=test
+ZIPKIN_PORT=test
 LOG_LEVEL=trace
