--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lerna:predevpublish": "git checkout devpublish && git merge -s recursive -X theirs develop",
     "devpublish": "npm run lerna:predevpublish && lerna publish --cd-version=prerelease",
     "postdevpublish": "git checkout develop",
-    "graphqlGenerate": "graphql-codegen",
+    "generateGraphql": "graphql-codegen",
     "graphqlGenerate:counter": "graphql-codegen --config  ./packages-modules/counter/codegen.yml",
     "devpublish:force": "npm run devpublish -- --force-publish=*",
     "lerna": "lerna bootstrap --hoist",
@@ -112,6 +112,7 @@
     "@types/enzyme": "^3.9.1",
     "@types/express": "^4.16.1",
     "@types/graphql": "^14.2.0",
+    "@types/hoist-non-react-statics": "^3.3.1",
     "@types/isomorphic-fetch": "0.0.35",
     "@types/jest": "^24.0.11",
     "@types/lodash-es": "^4.17.3",
@@ -230,6 +231,7 @@
     "tslint": "^5.16.0",
     "tslint-loader": "^3.6.0",
     "tslint-react": "^4.0.0",
+    "typedoc": "^0.13.0",
     "typescript": "3.4.5",
     "uglify-es": "^3.3.9",
     "uglifyjs-webpack-plugin": "^2.1.2",
